Fixed issue where window width causing zip box to collapse. Fixes and close #8

--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -77,7 +77,7 @@ Cross site syles
 }
 
 .absolute-center {
-  width: 60%;
+  width: 960px;
   overflow: auto;
   margin: auto;
   position: absolute  !important;
